<resources>
    <string name="app_name">Smart Pharmacy</string>
    <string name="monday">Seg</string>
    <string name="tuesday">Ter</string>
    <string name="wednesday">Qua</string>
    <string name="thursday">Qui</string>
    <string name="friday">Sex</string>
    <string name="saturday">Sab</string>
    <string name="sunday">Dom</string>
    <string name="scheduleMedication">Registrar Novo Medicamento</string>
    <string name="scheduleMedicationAlarmHour">Hora do Medicamento</string>
    <string name="scheduleMedicationAlarmTitle">Nome do Medicamento</string>
    <string name="scheduleMedicationSaveButton">Agendar Medicamento</string>
    <string name="scheduleMedicationRecurringTitle">Recorrência</string>
    <string name="scheduleMedicationDailyFrequencyTitle">Frequência Diaria</string>
    <string name="scheduleMedicationInventoryTotalTitle">Quantidade Total</string>
    <string name="scheduleMedicationDoseTitle">Dose</string>
</resources>
